fixed z-index of logo mobile

--- a/src/4_organisms/NavBar/NavBar.scss
+++ b/src/4_organisms/NavBar/NavBar.scss
@@ -5,6 +5,11 @@
     align-items: center;
     padding: 0px 20px;
 
+    .logo {
+        position: relative;
+        z-index: 1;
+    }
+
     /* BURGER + CLOSE */
     .nav-toggle {
         display: flex;
